--- a/app/src/main/res/menu/main_settings_menue.xml
+++ b/app/src/main/res/menu/main_settings_menue.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item
         android:id="@+id/settings"
-        android:orderInCategory="100"
+        android:orderInCategory="1"
         android:title="@string/main_settings" />
+    <item
+        android:id="@+id/credits"
+        android:orderInCategory="2"
+        android:title="@string/menu_item_3" />
+    <item
+        android:id="@+id/hilfe"
+        android:orderInCategory="3"
+        android:title="@string/settings_hilfe" />
 </menu>
