-Implementierung eines einfachen Logins + Verhinderung des Überspringens des Logins durch Drücken der Zurück-Taste -Alle Strings für den Login in die Strings.xml übernommen -Hintergrundfarbe auf die am nächsten passende Material-Color gesetzt -LoginActivity als erste Activity gesetzt (Start-Activity) -MainActivity in MainMenueActivity umbenannt -Ansprechendes Design des Logins durch Verwendung von "TextInputLayouts" für jedes Eingabefeld (E-Mail + Passwort)

--- a/app/src/main/res/menu/main_settings_menue.xml
+++ b/app/src/main/res/menu/main_settings_menue.xml
@@ -2,15 +2,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/settings"
+        android:id="@+id/menu_item_ausloggen"
         android:orderInCategory="1"
-        android:title="@string/main_settings" />
+        android:title="@string/menu_item_ausloggen" />
+
     <item
-        android:id="@+id/credits"
+        android:id="@+id/menu_item_einstellungen"
         android:orderInCategory="2"
+        android:title="@string/menu_item_einstellungen" />
+    <item
+        android:id="@+id/menu_item_credits"
+        android:orderInCategory="3"
         android:title="@string/menu_item_3" />
     <item
-        android:id="@+id/hilfe"
-        android:orderInCategory="3"
-        android:title="@string/settings_hilfe" />
+        android:id="@+id/menu_item_hilfe"
+        android:orderInCategory="4"
+        android:title="@string/menu_item_hilfe" />
 </menu>
