--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="background_color">#e0e0e0</color>
+    <color name="videoViewBackground">#000000</color>
 </resources>
