Einstellung "Videos im Querformat" hinzugefügt.  Unterstützung verschiedener Sprachen (Je nach Einstelllung des Smartphones) eingebaut. Aktuell Englisch und Deutsch

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -10,4 +10,9 @@
         android:singleLine="true"
         android:title="@string/benutzername_preferences_title" />
 
+    <SwitchPreference
+        android:disableDependentsState="false"
+        android:icon="@mipmap/ic_stay_current_landscape_black_24dp"
+        android:key="@string/landscape_preferences_key"
+        android:title="@string/landscape_preferences_title" />
 </PreferenceScreen>
