- WLAN-Option eingefügt - dafür Code in LiveStreamAtkivity ergänzt und agepasst - Strings uind icon geadded, etc. - preference.xml um Option erweitert
- NOCH KEINE Meldungen enthalten, ob WLAN geht oder nicht, bzw. ob WLAN aktiviert werden soll

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -6,4 +6,9 @@
         android:icon="@mipmap/ic_stay_current_landscape_black_24dp"
         android:key="@string/landscape_preferences_key"
         android:title="@string/landscape_preferences_title" />
+    <SwitchPreference
+        android:disableDependentsState="false"
+        android:icon="@drawable/ic_network_wifi_black_24dp"
+        android:key="@string/wlan_preferences_key"
+        android:title="@string/wlan_preferences_title" />
 </PreferenceScreen>
