--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#ff5252</color>
-    <color name="colorPrimaryDark">#303f9f</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimaryDark">#e53935</color>
+    <color name="colorAccent">#6200ea</color>
 
     <color name="background_color">#e0e0e0</color>
     <color name="videoViewBackground">#000000</color>
