-Dialog bei keiner Internetverbindung hinzugefügt (Wenn "nur via WLAN" aus ist und der Stream gestartet wird) -Dialoge angepasst, sodass sie nicht mehr verschwinden, wenn man neben sie klickt oder die Zurück-Taste drückt -Dialog Messages angepasst, sodass sie nun zwei-zeilig sind (bessere Lesbarkeit)
-einige Strings + Übersetzung verändert (Bessere Formulierungen)
-Beide String.xml besser strukturiert + aufgeräumt
-Icon von RegioTainment als App-Icon umgesetzt/definiert/hinzugefügt

-Willkommenstext als TOAST nach dem Login eingerichtet (in der MainMenuActivity)
-MainMenueActivity umbenannt in MainMenuActivity
-activity_main_menue.xml umbenannt in activity_main_menu

--- a/app/src/main/res/menu/main_settings_menue.xml
+++ b/app/src/main/res/menu/main_settings_menue.xml
@@ -3,6 +3,7 @@
 
     <item
         android:id="@+id/menu_item_einstellungen"
+        android:icon="@mipmap/ic_settings_black"
         android:orderInCategory="1"
         android:title="@string/menu_item_einstellungen" />
     <item
@@ -11,6 +12,7 @@
         android:title="@string/menu_item_3" />
     <item
         android:id="@+id/menu_item_hilfe"
+        android:icon="@mipmap/ic_help_black"
         android:orderInCategory="3"
         android:title="@string/menu_item_hilfe" />
     <item
