--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -5,10 +5,16 @@
         android:disableDependentsState="false"
         android:icon="@mipmap/ic_stay_current_landscape_black_24dp"
         android:key="@string/landscape_preferences_key"
+        android:summary="@string/landscape_preferences_summary"
         android:title="@string/landscape_preferences_title" />
     <SwitchPreference
         android:disableDependentsState="false"
         android:icon="@mipmap/ic_network_wifi_black_24dp"
         android:key="@string/wlan_preferences_key"
+        android:summary="@string/wlan_preferences_summary"
         android:title="@string/wlan_preferences_title" />
+    <Preference
+        android:key="@string/delete_email_history_preferences_key"
+        android:summary="@string/delete_email_history_preferences_summary"
+        android:title="@string/delete_email_history_preferences_title" />
 </PreferenceScreen>
