--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -14,6 +14,7 @@
         android:summary="@string/wlan_preferences_summary"
         android:title="@string/wlan_preferences_title" />
     <Preference
+        android:icon="@mipmap/ic_delete_black_24dp"
         android:key="@string/delete_email_history_preferences_key"
         android:summary="@string/delete_email_history_preferences_summary"
         android:title="@string/delete_email_history_preferences_title" />
