--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -16,6 +16,17 @@
             android:layout_height="140dp"
             android:scaleType="centerCrop" />
 
+        <ImageButton
+            android:id="@+id/threeDots"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignRight="@id/thumbnail"
+            android:layout_alignTop="@+id/thumbnail"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="10dp"
+            android:background="@null"
+            android:src="@drawable/threedots" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
