--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -25,7 +25,7 @@
             android:layout_marginRight="5dp"
             android:layout_marginTop="10dp"
             android:background="@null"
-            android:src="@drawable/threedots" />
+            android:src="@drawable/threedotswhite" />
 
         <LinearLayout
             android:layout_width="wrap_content"
