- Die Standarthintergrundfarbe der App wurde auf "weiß" festgelegt - Möglichkeit zum Ändern der Farbe des Overflow-Option-Menüs wurde implementiert (in style) - Möglichkeit zum Ändern der Farbe der SettingsActivity wurde implementiert (in der SettingsActivity)
- Das Layout der LoginActivity wurde von activity_login_original.cml in Activity_login.xml umbenannt

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="colorPrimaryDark">#e53935</color>
     <color name="colorAccent">#6200ea</color>
 
-    <color name="background_color">#e0e0e0</color>
+    <color name="background_color">#ffffff</color>
     <color name="videoViewBackground">#000000</color>
 </resources>
